--- a/src/app/work/projects/building-once-ui-a-customizable-design-system.mdx
+++ b/src/app/work/projects/building-once-ui-a-customizable-design-system.mdx
@@ -1,12 +1,11 @@
 ---
 title: "Building Once UI, a Customizable Design System"
 publishedAt: "2024-04-08"
-summary: "Development of a flexible and highly customizable design system using Next.js for front-end and Figma for design collaboration."
+summary: "The journey of creating a flexible and scalable design system"
 images:
-  - "/images/projects/project-01/cover-01.jpg"
-  - "/images/projects/project-01/cover-02.jpg"
-  - "/images/projects/project-01/cover-03.jpg"
   - "/images/projects/project-01/cover-04.jpg"
+  - "/images/projects/project-01/video-01.mp4"
+tag: ["Design System", "UI/UX", "Development"]
 team:
   - name: "Selene Yu"
     role: "Software Engineer"
@@ -16,11 +15,21 @@ team:
     role: "Product Manager"
     avatar: "/images/projects/project-01/avatar-01.jpg"
     linkedIn: "https://www.linkedin.com/company/once-ui/"
+link: ""
 ---
+
+This project details the development of Once UI, a comprehensive design system built to streamline the creation of modern web applications.
 
 ## Overview
 
-Development of a flexible and highly customizable design system using Next.js for front-end and Figma for design collaboration.
+Building a design system from scratch requires careful planning, extensive research, and iterative development. This case study explores the challenges and solutions encountered during the creation of Once UI.
+
+## Key Achievements
+
+- Created 50+ reusable components
+- Established consistent design tokens
+- Implemented automated testing
+- Achieved 100% accessibility compliance
 
 ## Key Features
 
