--- a/src/app/work/projects/simple-portfolio-builder.mdx
+++ b/src/app/work/projects/simple-portfolio-builder.mdx
@@ -1,7 +1,20 @@
 ---
 title: "Once UI: Open-source design system"
-publishedAt: "2024-04-08"
+publishedAt: "2024-04-15"
+summary: "A comprehensive design system for modern web applications"
 images:
   - "/images/projects/project-01/cover-04.jpg"
   - "/images/projects/project-01/video-01.mp4"
+tag: ["Design", "Open Source"]
+team: []
+link: ""
 ---
+
+This is the English version of the Once UI project. A comprehensive design system that provides developers with the tools they need to build beautiful, consistent user interfaces.
+
+## Features
+
+- Modular component library
+- Customizable design tokens
+- Responsive design patterns
+- Accessibility-first approach
