update projects content. Read case study and access site links to review. Another project to add

--- a/src/app/work/projects/building-once-ui-a-customizable-design-system.fr.mdx
+++ b/src/app/work/projects/building-once-ui-a-customizable-design-system.fr.mdx
@@ -1,13 +1,57 @@
 ---
-title: "Construire Once UI : Un système de design personnalisable"
-publishedAt: "2024-04-08"
-summary: "Version française du projet Building Once UI"
+title: "Darius Pizza – Premier projet web full-stack"
+publishedAt: "2022-06-01"
+summary: "Site vitrine dynamique pour une pizzeria familiale, avec CMS intégré"
 images:
-  - "/images/projects/project-01/cover-04.jpg"
-  - "/images/projects/project-01/video-01.mp4"
-tag: ["Design", "Système", "UI"]
-team: []
-link: ""
+  - "/images/projects/darius-pizza/mockup.jpg"
+  - "/images/projects/darius-pizza/site.jpg"
+tag: ["Full-Stack", "Web Development", "CMS"]
+team:
+  - name: "Alexy Roman"
+    role: "Développeur Full-Stack"
+    avatar: "/images/avatar.png"
+    linkedIn: "https://www.linkedin.com/in/alexyrfr"
+link: "https://dariuspizza.fr"
 ---
 
-Ceci est la version française du projet Building Once UI - Un système de design personnalisable. 
+Ce projet marque le **début de mon parcours en développement web**, réalisé pour la pizzeria familiale. Il s'agit d’un site vitrine moderne et responsive, accompagné d’un back-office personnalisé permettant à mes parents de gérer leur carte et leurs horaires en toute autonomie.
+
+## Introduction
+
+Darius Pizza est un site web vitrine conçu pour promouvoir la pizzeria familiale et offrir une interface simple pour la mise à jour de la carte des pizzas, des prix et des horaires. Ce fut ma toute première expérience de développement web complet, avec une grande motivation et une approche artisanale orientée utilisateur.
+
+## Achévement clés
+
+- Site responsive et en ligne depuis 2022
+- Interface d'administration simple et sécurisée
+- Carte des pizzas dynamique avec filtres
+- Gestion des horaires et contacts via back-office
+
+## Fonctionnalités
+
+- **Carte dynamique** : Affichage des pizzas par catégorie avec prix, description et options d’édition depuis l’admin.
+- **CMS sur mesure** : Système de gestion de contenu simple pour modifier la carte, les horaires et les infos de contact.
+- **Section contact** : Formulaire avec notice claire pour orienter vers les commandes par téléphone.
+- **Responsive design** : Adaptation fluide sur mobile, tablette et desktop.
+- **Visibilité locale** : Renforcement de la notoriété de l'établissement avec un site professionnel et clair.
+
+## Technologies Utilisées
+
+- **HTML/CSS/JavaScript** : Pour une base solide, légère et compréhensible.
+- **Node.js / Express** : Serveur backend pour la gestion des contenus et de l’authentification.
+- **MySQL** : Base de données pour stocker les pizzas, horaires et infos.
+- **EJS (ou alternative)** : Templating server-side pour le rendu dynamique.
+- **Hébergement mutualisé** : Nom de domaine personnalisé `dariuspizza.fr`.
+
+## Challenges et Leçons
+
+Concevoir un outil à la fois simple et utile pour des personnes non techniques a été un vrai défi. J'ai appris à :
+
+- Structurer un projet full-stack de bout en bout
+- Créer une interface utilisateur claire, sans surcharge
+- Mettre en œuvre l’authentification et la gestion de contenu
+- Déployer un site en production avec nom de domaine et hébergement stable
+
+## Résultat
+
+Le site est utilisé quotidiennement depuis 2022 et a permis à mes parents de gagner en autonomie et visibilité. Ce projet reste pour moi une grande fierté et une fondation solide sur laquelle j’ai bâti mes compétences de développeur web full-stack.
