--- a/src/app/work/projects/building-once-ui-a-customizable-design-system.mdx
+++ b/src/app/work/projects/building-once-ui-a-customizable-design-system.mdx
@@ -1,54 +1,57 @@
 ---
-title: "Building Once UI, a Customizable Design System"
-publishedAt: "2024-04-08"
-summary: "The journey of creating a flexible and scalable design system"
+title: "Darius Pizza – My First Full-Stack Web Project"
+publishedAt: "2022-06-01"
+summary: "A dynamic showcase website with CMS built for a family-owned pizzeria"
 images:
-  - "/images/projects/project-01/cover-04.jpg"
-  - "/images/projects/project-01/video-01.mp4"
-tag: ["Design System", "UI/UX", "Development"]
+  - "/images/projects/darius-pizza/mockup.jpg"
+  - "/images/projects/darius-pizza/site.jpg"
+tag: ["Full-Stack", "Web Development", "CMS"]
 team:
-  - name: "Selene Yu"
-    role: "Software Engineer"
+  - name: "Alexy Roman"
+    role: "Full-Stack Developer"
     avatar: "/images/avatar.png"
-    linkedIn: "https://www.linkedin.com/company/once-ui/"
-  - name: "Jane Smith"
-    role: "Product Manager"
-    avatar: "/images/projects/project-01/avatar-01.jpg"
-    linkedIn: "https://www.linkedin.com/company/once-ui/"
-link: ""
+    linkedIn: "https://www.linkedin.com/in/alexyrfr"
+link: "https://dariuspizza.fr"
 ---
 
-This project details the development of Once UI, a comprehensive design system built to streamline the creation of modern web applications.
+This project marks the **starting point of my journey as a web developer**, built for my family's pizzeria. It's a modern, responsive showcase website with a custom CMS, allowing them to manage their menu and opening hours without any technical skills.
 
 ## Overview
 
-Building a design system from scratch requires careful planning, extensive research, and iterative development. This case study explores the challenges and solutions encountered during the creation of Once UI.
+Darius Pizza is a dynamic brochure site designed to promote the family-run pizzeria and offer an intuitive admin interface to manage pizza listings, prices, and business hours. It was my first real-world full-stack project — built from scratch, with passion and a strong focus on usability.
 
 ## Key Achievements
 
-- Created 50+ reusable components
-- Established consistent design tokens
-- Implemented automated testing
-- Achieved 100% accessibility compliance
+- Fully responsive site live since 2022
+- Simple and secure admin interface
+- Dynamic pizza menu with real-time editing
+- CMS-powered opening hours and contact info
 
 ## Key Features
 
-- **Component Library**: Built a set of modular, reusable UI components using React and styled-components in Next.js, focusing on accessibility and responsiveness.
-- **Theming and Customization**: Integrated a theming system that allows easy switching and customization of color palettes, typography, and layout styles using CSS variables and Figma tokens.
-- **Figma Integration**: Collaborated closely with designers by setting up a shared design library in Figma. This library was synchronized with the codebase, ensuring design handoffs were seamless and that design tokens remained consistent across both platforms.
-- **Documentation and Usage Guidelines**: Developed comprehensive documentation with Storybook to showcase components, usage patterns, and best practices, ensuring the design system is easy to adopt by other teams.
+- **Dynamic Pizza Menu**: Menu displayed by category with price, description, and the ability to edit from the admin dashboard.
+- **Custom CMS**: Lightweight content management system for updating pizzas, prices, hours, and contact details.
+- **Contact Section**: Contact form with clear instructions (orders by phone only).
+- **Responsive Design**: Optimized for mobile, tablet, and desktop experiences.
+- **Local Visibility**: Strengthened the pizzeria’s online presence with a professional, user-friendly interface.
 
 ## Technologies Used
 
-- **Next.js**: For fast, server-rendered React applications.
-- **Figma**: For creating and managing design assets and prototypes.
-- **Styled-Components**: For styling React components with a modular, themable approach.
-- **Storybook**: For building an interactive, documented component library.
+- **HTML/CSS/JavaScript**: Clean, responsive front-end foundation.
+- **Node.js / Express**: Back-end logic and API for content management and authentication.
+- **MySQL**: Structured database for pizzas, hours, and contact data.
+- **EJS (or alternative)**: Server-side rendering for dynamic content.
+- **Shared Hosting**: Custom domain deployed at `dariuspizza.fr`.
 
 ## Challenges and Learnings
 
-One key challenge was balancing the need for flexibility with the desire to maintain design consistency. The solution involved creating well-defined design tokens and establishing clear guidelines for when and how components could be customized. Additionally, setting up effective collaboration workflows between designers and developers using Figma and Git was a learning experience that greatly improved the process.
+Building a tool for non-technical users taught me how to:
+
+- Structure a full-stack app from scratch
+- Design intuitive interfaces with minimal clutter
+- Handle authentication and secure content editing
+- Deploy a stable, production-ready website
 
 ## Outcome
 
-The design system is now actively used across multiple projects, leading to faster development cycles, fewer design inconsistencies, and improved collaboration between design and development teams. It has become a foundation for scaling our products efficiently while ensuring a cohesive user experience.
+The site has been running smoothly since 2022 and is still actively used by my parents to manage their business. It's brought them greater independence and local reach. For me, it represents a foundational, deeply personal project — the first real step into full-stack web development.
