--- a/src/app/work/projects/building-once-ui-a-customizable-design-system.fr.mdx
+++ b/src/app/work/projects/building-once-ui-a-customizable-design-system.fr.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Darius Pizza – Premier projet web full-stack"
-publishedAt: "2025-06-13"
+publishedAt: "2021-04-10"
 summary: "Site vitrine dynamique pour une pizzeria familiale, avec CMS intégré"
 images:
   - "/images/projects/darius-pizza/mockup.jpg"
@@ -16,18 +16,18 @@ link: "https://dariuspizza.fr"
 
 Ce projet marque le **début de mon parcours en développement web**, réalisé pour la pizzeria familiale. Il s'agit d’un site vitrine moderne et responsive, accompagné d’un back-office personnalisé permettant à mes parents de gérer leur carte et leurs horaires en toute autonomie.
 
-## Introduction
+## Vue d’ensemble
 
 Darius Pizza est un site web vitrine conçu pour promouvoir la pizzeria familiale et offrir une interface simple pour la mise à jour de la carte des pizzas, des prix et des horaires. Ce fut ma toute première expérience de développement web complet, avec une grande motivation et une approche artisanale orientée utilisateur.
 
-## Achévement clés
+## Réalisations principales
 
 - Site responsive et en ligne depuis 2021
 - Interface d'administration simple et sécurisée
 - Carte des pizzas dynamique avec filtres
 - Gestion des horaires et contacts via back-office
 
-## Fonctionnalités
+## Fonctionnalités clé
 
 - **Carte dynamique** : Affichage des pizzas par catégorie avec prix, description et options d’édition depuis l’admin.
 - **CMS sur mesure** : Système de gestion de contenu simple pour modifier la carte, les horaires et les infos de contact.
@@ -35,7 +35,7 @@ Darius Pizza est un site web vitrine conçu pour promouvoir la pizzeria familial
 - **Responsive design** : Adaptation fluide sur mobile, tablette et desktop.
 - **Visibilité locale** : Renforcement de la notoriété de l'établissement avec un site professionnel et clair.
 
-## Technologies Utilisées
+## Tech stack
 
 - **HTML/CSS/JavaScript** : Pour une base solide, légère et compréhensible.
 - **Node.js / Express** : Serveur backend pour la gestion des contenus et de l’authentification.
@@ -43,7 +43,7 @@ Darius Pizza est un site web vitrine conçu pour promouvoir la pizzeria familial
 - **EJS (ou alternative)** : Templating server-side pour le rendu dynamique.
 - **Hébergement mutualisé** : Nom de domaine personnalisé `dariuspizza.fr`.
 
-## Challenges et Leçons
+## Défis & apprentissages
 
 Concevoir un outil à la fois simple et utile pour des personnes non techniques a été un vrai défi. J'ai appris à :
 
@@ -52,6 +52,6 @@ Concevoir un outil à la fois simple et utile pour des personnes non techniques 
 - Mettre en œuvre l’authentification et la gestion de contenu
 - Déployer un site en production avec nom de domaine et hébergement stable
 
-## Résultat
+## Résultats
 
 Le site est utilisé quotidiennement depuis 2021 et a permis à mes parents de gagner en autonomie et visibilité. Ce projet reste pour moi une grande fierté et une fondation solide sur laquelle j’ai bâti mes compétences de développeur web full-stack.
