updating fc data plotter

--- a/src/app/work/projects/darius-pizza.fr.mdx
+++ b/src/app/work/projects/darius-pizza.fr.mdx
@@ -22,10 +22,10 @@ Darius Pizza est un site web vitrine conçu pour promouvoir la pizzeria familial
 
 ## Réalisations principales
 
-- Site responsive et en ligne depuis 2021
-- Interface d'administration simple et sécurisée
-- Carte des pizzas dynamique avec filtres
-- Gestion des horaires et contacts via back-office
+- 📱 Site responsive et en ligne depuis 2021
+- 🔐 Interface d'administration simple et sécurisée
+- 🍕 Carte des pizzas dynamique avec filtres
+- 🕒 Gestion des horaires et contacts via back-office
 
 ## Fonctionnalités clé
 
