--- a/src/app/work/projects/darius-pizza.mdx
+++ b/src/app/work/projects/darius-pizza.mdx
@@ -22,10 +22,10 @@ Darius Pizza is a dynamic brochure site designed to promote the family-run pizze
 
 ## Key Achievements
 
-- Fully responsive site live since 2022
-- Simple and secure admin interface
-- Dynamic pizza menu with real-time editing
-- CMS-powered opening hours and contact info
+- 📱 Fully responsive site live since 2022  
+- 🔐 Simple and secure admin interface  
+- 🍕 Dynamic pizza menu with real-time editing  
+- 🕒 CMS-powered opening hours and contact info  
 
 ## Key Features
 
