--- a/src/app/work/projects/fcs-data-processor.fr.mdx
+++ b/src/app/work/projects/fcs-data-processor.fr.mdx
@@ -1,17 +1,15 @@
 ---
-title: "FC Data Processor – Outil de Visualisation pour Données de Pile à Combustible"
+title: "H3 Dynamics - FC Data Processor – Outil de Visualisation pour Données de Pile à Combustible"
 publishedAt: "2024-03-01"
 summary: "Application Python développée en autonomie durant un stage en ingénierie système pour faciliter l’analyse de fichiers volumineux"
 images:
-  - "/images/projects/fc-processor/cover.jpg"
-  - "/images/projects/fc-processor/ui.jpg"
+    - "/images/projects/fcdata/fcdata.jpg"
 tag: ["Python", "Pile à Combustible", "Visualisation", "Optimisation"]
 team:
   - name: "Alexy Roman"
-    role: "Ingénieur Software"
+    role: "Ingénieur Logiciel"
     avatar: "/images/avatar.png"
     linkedIn: "https://www.linkedin.com/in/alexyrfr"
-link: "https://github.com/AlexyDarius/FC-Data-Processor"
 ---
 
 Ce projet a été développé **intégralement de manière autonome** pendant mon stage en **ingénierie système** chez **H3 Dynamics**. Mon poste ne concernait pas le développement logiciel, mais en voyant mon équipe en difficulté avec l’analyse de fichiers de données (plus de 1 Go), j’ai pris l’initiative de concevoir cet outil.
@@ -54,5 +52,3 @@ Ce projet a été développé **intégralement de manière autonome** pendant mo
 ## Résultat
 
 Cet outil a été utilisé pendant la campagne de tests FCS chez H3 Dynamics et a permis une **analyse rapide et fiable** des données là où les outils standards échouaient. Une belle démonstration de la valeur que peut apporter une initiative technique bien ciblée.
-
-[🔗 Dépôt GitHub](https://github.com/AlexyDarius/FC-Data-Processor)
