--- a/src/app/work/projects/fcs-data-processor.mdx
+++ b/src/app/work/projects/fcs-data-processor.mdx
@@ -1,17 +1,15 @@
 ---
-title: "FC Data Processor – Fuel Cell System Plotting Toolkit"
+title: "H3 Dynamics - FC Data Processor – Fuel Cell System Plotting Toolkit"
 publishedAt: "2024-03-01"
 summary: "Standalone plotting toolkit for high-volume FCS data, developed independently during a systems engineering internship"
 images:
-  - "/images/projects/fc-processor/cover.jpg"
-  - "/images/projects/fc-processor/ui.jpg"
+    - "/images/projects/fcdata/fcdata.jpg"
 tag: ["Python", "Fuel Cell", "Data Visualization", "AI Optimization"]
 team:
   - name: "Alexy Roman"
     role: "Software Developer"
     avatar: "/images/avatar.png"
     linkedIn: "https://www.linkedin.com/in/alexyrfr"
-link: "https://github.com/AlexyDarius/FC-Data-Processor"
 ---
 
 This tool was developed **entirely independently** during my systems engineering internship at **H3 Dynamics**. While my role wasn't related to software, I noticed the team struggling with huge CSV files from a test campaign — and decided to build a robust, AI-optimized plotting solution to help.
@@ -56,5 +54,3 @@ I was the **sole developer** — this was not part of my assigned tasks, but a s
 ## Outcome
 
 The tool became **critical** during the fuel cell test campaign. It allowed the team to rapidly analyze and compare system performance, where traditional tools failed. For me, it proved the power of applied software in system engineering — and confirmed my interest in building solutions where they're needed most.
-
-[🔗 GitHub Repository](https://github.com/AlexyDarius/FC-Data-Processor)
