updating main page with starred projects

--- a/src/app/work/projects/darius-pizza.fr.mdx
+++ b/src/app/work/projects/darius-pizza.fr.mdx
@@ -12,11 +12,12 @@ team:
     avatar: "/images/avatar.png"
     linkedIn: "https://www.linkedin.com/in/alexyrfr"
 link: "https://dariuspizza.fr"
+starred: true
 ---
 
-Ce projet marque le **début de mon parcours en développement web**, réalisé pour la pizzeria familiale. Il s'agit d’un site vitrine moderne et responsive, accompagné d’un back-office personnalisé permettant à mes parents de gérer leur carte et leurs horaires en toute autonomie.
+Ce projet marque le **début de mon parcours en développement web**, réalisé pour la pizzeria familiale. Il s'agit d'un site vitrine moderne et responsive, accompagné d'un back-office personnalisé permettant à mes parents de gérer leur carte et leurs horaires en toute autonomie.
 
-## Vue d’ensemble
+## Vue d'ensemble
 
 Darius Pizza est un site web vitrine conçu pour promouvoir la pizzeria familiale et offrir une interface simple pour la mise à jour de la carte des pizzas, des prix et des horaires. Ce fut ma toute première expérience de développement web complet, avec une grande motivation et une approche artisanale orientée utilisateur.
 
@@ -29,7 +30,7 @@ Darius Pizza est un site web vitrine conçu pour promouvoir la pizzeria familial
 
 ## Fonctionnalités clé
 
-- **Carte dynamique** : Affichage des pizzas par catégorie avec prix, description et options d’édition depuis l’admin.
+- **Carte dynamique** : Affichage des pizzas par catégorie avec prix, description et options d'édition depuis l'admin.
 - **CMS sur mesure** : Système de gestion de contenu simple pour modifier la carte, les horaires et les infos de contact.
 - **Section contact** : Formulaire avec notice claire pour orienter vers les commandes par téléphone.
 - **Responsive design** : Adaptation fluide sur mobile, tablette et desktop.
@@ -38,7 +39,7 @@ Darius Pizza est un site web vitrine conçu pour promouvoir la pizzeria familial
 ## Tech stack
 
 - **HTML/CSS/JavaScript** : Pour une base solide, légère et compréhensible.
-- **Node.js / Express** : Serveur backend pour la gestion des contenus et de l’authentification.
+- **Node.js / Express** : Serveur backend pour la gestion des contenus et de l'authentification.
 - **MySQL** : Base de données pour stocker les pizzas, horaires et infos.
 - **EJS (ou alternative)** : Templating server-side pour le rendu dynamique.
 - **Hébergement mutualisé** : Nom de domaine personnalisé `dariuspizza.fr`.
@@ -49,9 +50,9 @@ Concevoir un outil à la fois simple et utile pour des personnes non techniques 
 
 - Structurer un projet full-stack de bout en bout
 - Créer une interface utilisateur claire, sans surcharge
-- Mettre en œuvre l’authentification et la gestion de contenu
+- Mettre en œuvre l'authentification et la gestion de contenu
 - Déployer un site en production avec nom de domaine et hébergement stable
 
 ## Résultats
 
-Le site est utilisé quotidiennement depuis 2021 et a permis à mes parents de gagner en autonomie et visibilité. Ce projet reste pour moi une grande fierté et une fondation solide sur laquelle j’ai bâti mes compétences de développeur web full-stack.
+Le site est utilisé quotidiennement depuis 2021 et a permis à mes parents de gagner en autonomie et visibilité. Ce projet reste pour moi une grande fierté et une fondation solide sur laquelle j'ai bâti mes compétences de développeur web full-stack.
