--- a/src/app/work/projects/darius-pizza.mdx
+++ b/src/app/work/projects/darius-pizza.mdx
@@ -12,6 +12,7 @@ team:
     avatar: "/images/avatar.png"
     linkedIn: "https://www.linkedin.com/in/alexyrfr"
 link: "https://dariuspizza.fr"
+starred: true
 ---
 
 This project marks the **starting point of my journey as a web developer**, built for my family's pizzeria. It's a modern, responsive showcase website with a custom CMS, allowing them to manage their menu and opening hours without any technical skills.
@@ -33,7 +34,7 @@ Darius Pizza is a dynamic brochure site designed to promote the family-run pizze
 - **Custom CMS**: Lightweight content management system for updating pizzas, prices, hours, and contact details.
 - **Contact Section**: Contact form with clear instructions (orders by phone only).
 - **Responsive Design**: Optimized for mobile, tablet, and desktop experiences.
-- **Local Visibility**: Strengthened the pizzeria’s online presence with a professional, user-friendly interface.
+- **Local Visibility**: Strengthened the pizzeria's online presence with a professional, user-friendly interface.
 
 ## Technologies Used
 
