--- a/src/app/blog/posts/internship.fr.mdx
+++ b/src/app/blog/posts/internship.fr.mdx
@@ -3,7 +3,7 @@ title: "Structurer l'innovation : ingénierie système dans une start-up aérona
 summary: "Retour sur mon expérience de stage de fin d'études, durant laquelle j'ai conçu et déployé des processus d'ingénierie système adaptés à une start-up aéronautique en forte croissance, avec un accent sur la certification et l'efficacité opérationnelle."
 publishedAt: "2024-09-07"
 tag: "Expérience de stage"
-image: "/images/internship/internship.jpg"
+image: "/images/internship/internship.webp"
 ---
 
 ## Un ingénieur système au cœur de l'innovation
@@ -66,7 +66,7 @@ Bien que mon rôle soit orienté processus, j’ai également été impliqué da
 
 Ces expériences m’ont permis d’ancrer mes travaux dans le réel. Elles ont nourri l’amélioration continue des modèles livrés, renforcé leur pertinence, et facilité leur adoption par les équipes.
 
-![Workflow du cycle de vie projet](/images/internship/workflow.jpg)
+![Workflow du cycle de vie projet](/images/internship/workflow.webp)
 
 ## Résultats clés
 
