--- a/src/app/blog/posts/internship.mdx
+++ b/src/app/blog/posts/internship.mdx
@@ -3,7 +3,7 @@ title: "Structuring Innovation: Systems Engineering in a Hydrogen Aviation Start
 summary: "My experience designing and deploying end-to-end Systems Engineering processes within a fast-growing hydrogen aviation company, with a focus on certification-readiness and operational efficiency."
 publishedAt: "2024-09-07"
 tag: "Internship Experience"
-image: "/images/internship/internship.jpg"
+image: "/images/internship/internship.webp"
 ---
 
 ## A Systems Engineer at the Heart of Innovation
@@ -66,7 +66,7 @@ Although my role was process-oriented, I was also involved in on-site technical 
 
 These experiences were crucial in grounding the processes I designed in real operational needs. It allowed me to validate assumptions, fine-tune templates, and better advocate for SE adoption across the team.
 
-![Project Lifecycle Workflow](/images/internship/workflow.jpg)
+![Project Lifecycle Workflow](/images/internship/workflow.webp)
 
 ## Key Outcomes
 
