--- a/src/app/work/projects/darius-pizza.mdx
+++ b/src/app/work/projects/darius-pizza.mdx
@@ -3,13 +3,13 @@ title: "Darius Pizza – My First Full-Stack Web Project"
 publishedAt: "2021-04-10"
 summary: "A dynamic showcase website with CMS built for a family-owned pizzeria"
 images:
-  - "/images/projects/darius-pizza/mockup.jpg"
-  - "/images/projects/darius-pizza/site.jpg"
+  - "/images/projects/darius-pizza/mockup.webp"
+  - "/images/projects/darius-pizza/site.webp"
 tag: ["Full-Stack", "Web Development", "CMS"]
 team:
   - name: "Alexy Roman"
     role: "Full-Stack Developer"
-    avatar: "/images/avatar.png"
+    avatar: "/images/avatar.webp"
     linkedIn: "https://www.linkedin.com/in/alexyrfr"
 link: "https://dariuspizza.fr"
 starred: true
