--- a/src/app/work/projects/fcs-data-processor.mdx
+++ b/src/app/work/projects/fcs-data-processor.mdx
@@ -3,12 +3,12 @@ title: "H3 Dynamics - FC Data Processor – Fuel Cell System Plotting Toolkit"
 publishedAt: "2024-03-01"
 summary: "Standalone plotting toolkit for high-volume FCS data, developed independently during a systems engineering internship"
 images:
-    - "/images/projects/fcdata/fcdata.jpg"
+    - "/images/projects/fcdata/fcdata.webp"
 tag: ["Python", "Fuel Cell", "Data Visualization", "AI Optimization"]
 team:
   - name: "Alexy Roman"
     role: "Software Developer"
-    avatar: "/images/avatar.png"
+    avatar: "/images/avatar.webp"
     linkedIn: "https://www.linkedin.com/in/alexyrfr"
 ---
 
