--- a/src/app/work/projects/solar-powered-gps-for-hiking.fr.mdx
+++ b/src/app/work/projects/solar-powered-gps-for-hiking.fr.mdx
@@ -1,25 +1,25 @@
 ---
 title: "Traceur GPS Solaire pour la Randonnée"
 publishedAt: "2023-08-15"
-summary: "GPS autonome sous Arduino, conversion UTM, énergie solaire, précision 5 m"
+summary: "GPS autonome sous Arduino, conversion UTM, énergie solaire, précision 5 m"
 images:
-  - "/images/projects/gps/gps-loc.jpg"
-  - "/images/projects/gps/gps-intern.jpg"
-  - "/images/projects/gps/gps-ext.jpg"
+  - "/images/projects/gps/gps-loc.webp"
+  - "/images/projects/gps/gps-intern.webp"
+  - "/images/projects/gps/gps-ext.webp"
 tag: ["Arduino", "C++", "Systèmes embarqués", "GPS", "Solaire"]
 team:
   - name: "Alexy Roman"
     role: "Ingénieur Systèmes Embarqués"
-    avatar: "/images/avatar.png"
+    avatar: "/images/avatar.webp"
     linkedIn: "https://www.linkedin.com/in/alexyrfr"
 link: "https://github.com/AlexyDarius/Arduino-GPS-Display"
 ---
 
-Un défi personnel inspiré par ma passion pour la randonnée : un traceur GPS autonome à énergie solaire, construit autour d’un Arduino Nano. Il fournit une position UTM compatible avec les cartes IGN, et ne tombe jamais en panne grâce à son système de recharge solaire.
+Un défi personnel inspiré par ma passion pour la randonnée : un traceur GPS autonome à énergie solaire, construit autour d'un Arduino Nano. Il fournit une position UTM compatible avec les cartes IGN, et ne tombe jamais en panne grâce à son système de recharge solaire.
 
 Le code, schémas et détails de câblage sont disponibles sur GitHub : [Arduino-GPS-Display](https://github.com/AlexyDarius/Arduino-GPS-Display)
 
-## Vue d’ensemble
+## Vue d'ensemble
 
 Le dispositif capte les données GPS – latitude, longitude, altitude, vitesse, qualité du signal – les convertit en **UTM** pour les cartes topographiques IGN, et les affiche en continu sur un écran OLED compact.
 
