--- a/src/app/work/projects/solar-powered-gps-for-hiking.mdx
+++ b/src/app/work/projects/solar-powered-gps-for-hiking.mdx
@@ -3,14 +3,14 @@ title: "Solar-Powered GPS Tracker for Hiking"
 publishedAt: "2023-08-15"
 summary: "An autonomous Arduino-based GPS tracker with UTM conversion, solar charging, and rugged reliability"
 images:
-  - "/images/projects/gps/gps-loc.jpg"
-  - "/images/projects/gps/gps-intern.jpg"
-  - "/images/projects/gps/gps-ext.jpg"
+  - "/images/projects/gps/gps-loc.webp"
+  - "/images/projects/gps/gps-intern.webp"
+  - "/images/projects/gps/gps-ext.webp"
 tag: ["Arduino", "C++", "Embedded", "GPS", "Solar"]
 team:
   - name: "Alexy Roman"
     role: "Embedded Systems Engineer"
-    avatar: "/images/avatar.png"
+    avatar: "/images/avatar.webp"
     linkedIn: "https://www.linkedin.com/in/alexyrfr"
 link: "https://github.com/AlexyDarius/Arduino-GPS-Display"
 ---
@@ -58,4 +58,4 @@ The full code, PCB schematics, and wiring details are available on GitHub: [Ardu
 
 ## Outcome
 
-A fully independent GPS navigator that **never runs out of battery** and delivers **map-ready UTM coords**, formatted for integration with IGN hiking cards. It’s become my **trusted companion** on trails, and a first step in the world of embedded systems.
+A fully independent GPS navigator that **never runs out of battery** and delivers **map-ready UTM coords**, formatted for integration with IGN hiking cards. It's become my **trusted companion** on trails, and a first step in the world of embedded systems.
