--- a/src/app/work/projects/darius-pizza.fr.mdx
+++ b/src/app/work/projects/darius-pizza.fr.mdx
@@ -3,13 +3,13 @@ title: "Darius Pizza – Premier projet web full-stack"
 publishedAt: "2021-04-10"
 summary: "Site vitrine dynamique pour une pizzeria familiale, avec CMS intégré"
 images:
-  - "/images/projects/darius-pizza/mockup.jpg"
-  - "/images/projects/darius-pizza/site.jpg"
+  - "/images/projects/darius-pizza/mockup.webp"
+  - "/images/projects/darius-pizza/site.webp"
 tag: ["Full-Stack", "Web Development", "CMS"]
 team:
   - name: "Alexy Roman"
     role: "Développeur Full-Stack"
-    avatar: "/images/avatar.png"
+    avatar: "/images/avatar.webp"
     linkedIn: "https://www.linkedin.com/in/alexyrfr"
 link: "https://dariuspizza.fr"
 starred: true
