--- a/src/app/work/projects/fcs-data-processor.fr.mdx
+++ b/src/app/work/projects/fcs-data-processor.fr.mdx
@@ -3,12 +3,12 @@ title: "H3 Dynamics - FC Data Processor – Outil de Visualisation pour Données
 publishedAt: "2024-03-01"
 summary: "Application Python développée en autonomie durant un stage en ingénierie système pour faciliter l’analyse de fichiers volumineux"
 images:
-    - "/images/projects/fcdata/fcdata.jpg"
+    - "/images/projects/fcdata/fcdata.webp"
 tag: ["Python", "Pile à Combustible", "Visualisation", "Optimisation"]
 team:
   - name: "Alexy Roman"
     role: "Ingénieur Logiciel"
-    avatar: "/images/avatar.png"
+    avatar: "/images/avatar.webp"
     linkedIn: "https://www.linkedin.com/in/alexyrfr"
 ---
 
